--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 
     <!-- Social Media Buttons -->
     <div id="socials">
-        <a href="https://facebook.com" target="_blank">
-            <img src="facebook_icon.png" alt="Facebook" class="social-btn"> <!-- Replace 'facebook_icon.png' with the path to your Facebook icon -->
+        <a href="https://telegram.com" target="_blank">
+            <img src="telegram_icon.png" alt="Telegram" class="social-btn"> <!-- Replace 'facebook_icon.png' with the path to your Facebook icon -->
         </a>
         <a href="https://twitter.com" target="_blank">
             <img src="twitter_icon.png" alt="Twitter" class="social-btn"> <!-- Replace 'twitter_icon.png' with the path to your Twitter icon -->
         </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="instagram_icon.png" alt="Instagram" class="social-btn"> <!-- Replace 'instagram_icon.png' with the path to your Instagram icon -->
+        <a href="https://pump.fun" target="_blank">
+            <img src="pumpfun_icon.png" alt="pumpfun" class="social-btn"> <!-- Replace 'instagram_icon.png' with the path to your Instagram icon -->
         </a>
     </div>
 
