--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="https://telegram.com" target="_blank">
             <img src="telegram_icon.png" alt="Telegram" class="social-btn"> <!-- Replace 'facebook_icon.png' with the path to your Facebook icon -->
         </a>
-        <a href="https://twitter.com" target="_blank">
+        <a href="https://x.com/Doge_Crossing" target="_blank">
             <img src="twitter_icon.png" alt="Twitter" class="social-btn"> <!-- Replace 'twitter_icon.png' with the path to your Twitter icon -->
         </a>
         <a href="https://pump.fun" target="_blank">
