--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-items: flex-start;
             justify-content: center;
             font-family: Arial, sans-serif;
-            background: url('webpage_background.jpg') no-repeat center center/cover; /* Replace with your background image */
+            background: url('webpage_background.jpg') no-repeat center center/cover;
             overflow: hidden;
             height: 100vh;
         }
@@ -37,25 +37,25 @@
             position: relative;
             width: 400px;
             height: 700px;
-            background: url('road_background.jpg') no-repeat center center/cover; /* Replace with your road background image */
+            background: url('road_background.jpg') no-repeat center center/cover;
             overflow: hidden;
             border: 2px solid #fff;
-            margin-top: 20px;
+            margin-top: 10px;
         }
         #animal {
             position: absolute;
-            bottom: 660px; /* Starting at the empty lane */
+            bottom: 660px;
             left: 180px;
             width: 40px;
             height: 40px;
-            background: url('animal_image.png') no-repeat center center/contain; /* Replace with your animal image */
+            background: url('animal_image.png') no-repeat center center/contain;
             background-size: contain;
         }
         .car {
             position: absolute;
             width: 80px;
             height: 40px;
-            background: url('car_image.png') no-repeat center center/contain; /* Replace with your car image */
+            background: url('car_image.png') no-repeat center center/contain;
             background-size: contain;
         }
         .lane {
@@ -65,7 +65,7 @@
             background-color: transparent;
             border-bottom: 1px dashed #fff;
         }
-        /* Sidebar styling */
+        /* Instructions Box */
         #instructions {
             width: 300px;
             padding: 20px;
@@ -75,11 +75,9 @@
             color: #333;
             font-size: 16px;
             line-height: 1.5;
-            position: relative;
-            top: 20px;
         }
         #instructions h2 {
-            font-size: 24px;
+            font-size: 20px;
             margin-bottom: 10px;
             text-align: center;
         }
@@ -87,40 +85,53 @@
 </head>
 <body>
     <!-- Website Logo -->
-    <img id="logo" src="logo.png" alt="Website Logo"> <!-- Replace 'logo.png' with the path to your logo image -->
+    <img id="logo" src="logo.png" alt="Website Logo">
 
-    <!-- Game Container -->
-    <div id="gameContainer">
-        <div id="animal"></div>
-        <!-- Start with an empty lane at the bottom for an easier starting point -->
-        <div class="lane" style="top: 640px;"></div> <!-- Empty starting lane where the animal starts -->
-        <div class="lane" style="top: 560px;"><div class="car" style="left: 0;"></div></div>
-        <div class="lane" style="top: 480px;"><div class="car" style="left: 320px;"></div></div>
-        <div class="lane" style="top: 400px;"><div class="car" style="left: 0;"></div></div>
-        <div class="lane" style="top: 320px;"><div class="car" style="left: 320px;"></div></div>
-        <div class="lane" style="top: 240px;"><div class="car" style="left: 0;"></div></div>
-        <div class="lane" style="top: 160px;"><div class="car" style="left: 320px;"></div></div>
-        <div class="lane" style="top: 80px;"><div class="car" style="left: 0;"></div></div>
+    <!-- Social Media Buttons -->
+    <div id="socials">
+        <a href="https://telegram.com" target="_blank">
+            <img src="telegram_icon.png" alt="Telegram" class="social-btn">
+        </a>
+        <a href="https://x.com/Doge_Crossing" target="_blank">
+            <img src="twitter_icon.png" alt="Twitter" class="social-btn">
+        </a>
+        <a href="https://pump.fun" target="_blank">
+            <img src="pumpfun_icon.png" alt="pumpfun" class="social-btn">
+        </a>
     </div>
 
-    <!-- Instruction Box -->
-    <div id="instructions">
-        <h2>Instructions</h2>
-        <p>Welcome to Doge Crossing! Guide the dog across the road without hitting any cars.</p>
-        <ul>
-            <li>Use the <strong>Arrow Keys</strong> to move the dog:</li>
-            <li><strong>Up Arrow</strong> to move up</li>
-            <li><strong>Down Arrow</strong> to move down</li>
-            <li><strong>Left Arrow</strong> to move left</li>
-            <li><strong>Right Arrow</strong> to move right</li>
-        </ul>
-        <p>Avoid the cars and try to reach the top lane safely. Good luck!</p>
+    <!-- Game Container -->
+    <div style="display: flex; flex-direction: row;">
+        <div id="gameContainer">
+            <div id="animal"></div>
+            <div class="lane" style="top: 640px;"></div>
+            <div class="lane" style="top: 560px;"><div class="car" style="left: 0;"></div></div>
+            <div class="lane" style="top: 480px;"><div class="car" style="left: 320px;"></div></div>
+            <div class="lane" style="top: 400px;"><div class="car" style="left: 0;"></div></div>
+            <div class="lane" style="top: 320px;"><div class="car" style="left: 320px;"></div></div>
+            <div class="lane" style="top: 240px;"><div class="car" style="left: 0;"></div></div>
+            <div class="lane" style="top: 160px;"><div class="car" style="left: 320px;"></div></div>
+            <div class="lane" style="top: 80px;"><div class="car" style="left: 0;"></div></div>
+        </div>
+
+        <!-- Instructions Box -->
+        <div id="instructions">
+            <h2>Instructions</h2>
+            <p>Welcome to Doge Crossing! Guide the dog across the road without hitting any cars.</p>
+            <ul>
+                <li><strong>Up Arrow:</strong> Move up</li>
+                <li><strong>Down Arrow:</strong> Move down</li>
+                <li><strong>Left Arrow:</strong> Move left</li>
+                <li><strong>Right Arrow:</strong> Move right</li>
+            </ul>
+            <p>Avoid the cars and try to reach the top lane safely. Good luck!</p>
+        </div>
     </div>
 
     <script>
         const animal = document.getElementById('animal');
         const cars = document.querySelectorAll('.car');
-        let animalPosition = { top: 660, left: 180 }; // Starting position in the first empty lane
+        let animalPosition = { top: 660, left: 180 };
 
         document.addEventListener('keydown', (event) => {
             const step = 20;
@@ -142,14 +153,12 @@
             cars.forEach((car, index) => {
                 let carPosition = parseInt(car.style.left) || 0;
 
-                // Set speed to be slower for lower lanes and faster for upper lanes
                 let totalLanes = cars.length;
-                let carSpeed = 1 + (index * 0.5); // Increase speed more for higher lanes (bottom to top)
-                carSpeed = (index % 2 === 0) ? carSpeed : -carSpeed; // Alternate direction for variety
+                let carSpeed = 1 + (index * 0.5);
+                carSpeed = (index % 2 === 0) ? carSpeed : -carSpeed;
                 
                 carPosition += carSpeed;
 
-                // Reset car to opposite side if it moves out of bounds
                 if (carPosition > 400) carPosition = -80;
                 if (carPosition < -80) carPosition = 400;
 
@@ -157,7 +166,7 @@
             });
         }
 
-        setInterval(moveCars, 16); // Move cars every 16ms for smoother animation
+        setInterval(moveCars, 16);
 
         function checkCollision() {
             cars.forEach(car => {
@@ -165,7 +174,7 @@
                 const animalRect = animal.getBoundingClientRect();
                 if (!(animalRect.right < carRect.left || animalRect.left > carRect.right || animalRect.bottom < carRect.top || animalRect.top > carRect.bottom)) {
                     alert("Collision! Game Over.");
-                    animalPosition = { top: 660, left: 180 }; // Reset to starting position
+                    animalPosition = { top: 660, left: 180 };
                     animal.style.top = animalPosition.top + 'px';
                     animal.style.left = animalPosition.left + 'px';
                 }
