--- a/index.html
+++ b/index.html
@@ -12,26 +12,39 @@
         }
         body {
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             justify-content: center;
+            flex-direction: column;
             font-family: Arial, sans-serif;
             background: url('webpage_background.jpg') no-repeat center center/cover;
             overflow: hidden;
             height: 100vh;
         }
+        #header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            max-width: 800px;
+            padding: 10px 20px;
+            box-sizing: border-box;
+        }
         #logo {
-            margin-top: 20px;
-            width: 150px;
+            width: 120px;
         }
         #socials {
             display: flex;
-            justify-content: center;
-            margin: 10px;
+            gap: 15px;
         }
         .social-btn {
-            width: 40px;
-            height: 40px;
-            margin: 0 10px;
+            width: 35px;
+            height: 35px;
+        }
+        #content {
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+            margin-top: 10px;
         }
         #gameContainer {
             position: relative;
@@ -40,7 +53,6 @@
             background: url('road_background.jpg') no-repeat center center/cover;
             overflow: hidden;
             border: 2px solid #fff;
-            margin-top: 10px;
         }
         #animal {
             position: absolute;
@@ -65,11 +77,9 @@
             background-color: transparent;
             border-bottom: 1px dashed #fff;
         }
-        /* Instructions Box */
         #instructions {
             width: 300px;
             padding: 20px;
-            margin-left: 20px;
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             color: #333;
@@ -84,24 +94,25 @@
     </style>
 </head>
 <body>
-    <!-- Website Logo -->
-    <img id="logo" src="logo.png" alt="Website Logo">
-
-    <!-- Social Media Buttons -->
-    <div id="socials">
-        <a href="https://telegram.com" target="_blank">
-            <img src="telegram_icon.png" alt="Telegram" class="social-btn">
-        </a>
-        <a href="https://x.com/Doge_Crossing" target="_blank">
-            <img src="twitter_icon.png" alt="Twitter" class="social-btn">
-        </a>
-        <a href="https://pump.fun" target="_blank">
-            <img src="pumpfun_icon.png" alt="pumpfun" class="social-btn">
-        </a>
+    <!-- Header Section with Logo and Social Media Buttons -->
+    <div id="header">
+        <img id="logo" src="logo.png" alt="Website Logo"> <!-- Replace 'logo.png' with your logo path -->
+        <div id="socials">
+            <a href="https://telegram.com" target="_blank">
+                <img src="telegram_icon.png" alt="Telegram" class="social-btn"> <!-- Replace with Telegram icon path -->
+            </a>
+            <a href="https://x.com/Doge_Crossing" target="_blank">
+                <img src="twitter_icon.png" alt="Twitter" class="social-btn"> <!-- Replace with Twitter icon path -->
+            </a>
+            <a href="https://pump.fun" target="_blank">
+                <img src="pumpfun_icon.png" alt="Pump.fun" class="social-btn"> <!-- Replace with Pump.fun icon path -->
+            </a>
+        </div>
     </div>
 
-    <!-- Game Container -->
-    <div style="display: flex; flex-direction: row;">
+    <!-- Main Content Section with Game and Instructions -->
+    <div id="content">
+        <!-- Game Container -->
         <div id="gameContainer">
             <div id="animal"></div>
             <div class="lane" style="top: 640px;"></div>
@@ -180,6 +191,10 @@
                 }
             });
         }
+    </script>
+</body>
+</html>
+
     </script>
 </body>
 </html>
