--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div id="header">
         <img id="logo" src="logo.png" alt="Website Logo"> <!-- Replace 'logo.png' with your logo path -->
         <div id="socials">
-            <a href="https://telegram.com" target="_blank">
+            <a href="https://t.me/dogecrossing" target="_blank">
                 <img src="telegram_icon.png" alt="Telegram" class="social-btn"> <!-- Replace with Telegram icon path -->
             </a>
             <a href="https://x.com/Doge_Crossing" target="_blank">
