--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a href="https://x.com/Doge_Crossing" target="_blank">
                 <img src="twitter_icon.png" alt="Twitter" class="social-btn"> <!-- Replace with Twitter icon path -->
             </a>
-            <a href="https://pump.fun" target="_blank">
+            <a href="https://pump.fun/KHnyGneGPNRnjyD1kdiJAWvFVgxgVc3P9k7qqx2pump" target="_blank">
                 <img src="pumpfun_icon.png" alt="Pump.fun" class="social-btn"> <!-- Replace with Pump.fun icon path -->
             </a>
         </div>
